Signed content verification