@@ -1,7 +1,9 @@
 package io.vertx.ext.httpservicefactory;
 
+import io.vertx.core.AsyncResult;
 import io.vertx.core.DeploymentOptions;
 import io.vertx.core.Future;
+import io.vertx.core.Handler;
 import io.vertx.core.Vertx;
 import io.vertx.core.file.AsyncFile;
 import io.vertx.core.file.OpenOptions;
@@ -11,11 +13,16 @@ import io.vertx.core.http.HttpClientRequest;
 import io.vertx.core.json.JsonObject;
 import io.vertx.core.streams.Pump;
 import io.vertx.service.ServiceVerticleFactory;
+import org.bouncycastle.openpgp.PGPPublicKey;
+import org.bouncycastle.openpgp.PGPSignature;
 
 import java.io.File;
+import java.io.FileInputStream;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.net.URLEncoder;
+import java.nio.file.Files;
 import java.util.Base64;
 import java.util.Collections;
 import java.util.jar.Attributes;
@@ -32,6 +39,8 @@ public class HttpServiceFactory extends ServiceVerticleFactory {
   public static final String HTTPS_CLIENT_OPTIONS_PROPERTY = "vertx.httpServiceFactory.httpsClientOptions";
   public static final String AUTH_USERNAME_PROPERTY = "vertx.httpServiceFactory.authUsername";
   public static final String AUTH_PASSWORD_PROPERTY = "vertx.httpServiceFactory.authPassword";
+  public static final String KEYSERVER_HOST = "vertx.httpServiceFactory.keyserverHost";
+  public static final String KEYSERVER_PORT = "vertx.httpServiceFactory.keyserverPort";
 
   private static final String FILE_SEP = System.getProperty("file.separator");
   private static final String FILE_CACHE_DIR = ".vertx" + FILE_SEP + "vertx-http-service-factory";
@@ -40,6 +49,8 @@ public class HttpServiceFactory extends ServiceVerticleFactory {
   private File cacheDir;
   private String username;
   private String password;
+  private String keyserverHost;
+  private int keyserverPort;
   private HttpClientOptions options;
 
   @Override
@@ -50,6 +61,8 @@ public class HttpServiceFactory extends ServiceVerticleFactory {
     options = configOptions();
     username = System.getProperty(AUTH_USERNAME_PROPERTY);
     password = System.getProperty(AUTH_PASSWORD_PROPERTY);
+    keyserverHost = System.getProperty(KEYSERVER_HOST); // pool.sks-keyservers.net
+    keyserverPort = System.getProperty(KEYSERVER_PORT) != null ? Integer.parseInt(System.getProperty(KEYSERVER_PORT)) : 11371;
     this.vertx = vertx;
   }
 
@@ -77,97 +90,154 @@ public class HttpServiceFactory extends ServiceVerticleFactory {
       stringURL = identifier;
     }
 
-    URL url;
-    String key;
+    URI url;
+    URI signatureURL;
+    String deploymentKey;
+    String signatureKey;
     try {
-      url = new URL(stringURL);
-      key = URLEncoder.encode(identifier, "UTF-8");
+      url = new URI(stringURL);
+      signatureURL = new URI(url.getScheme(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath() + ".asc", url.getQuery(), url.getFragment());
+      deploymentKey = URLEncoder.encode(url.toString(), "UTF-8");
+      signatureKey = URLEncoder.encode(signatureURL.toString(), "UTF-8");
     } catch (Exception e) {
       resolution.fail(e);
       return;
     }
+    File deploymentFile = new File(cacheDir, deploymentKey);
+    File signatureFile = new File(cacheDir, signatureKey);
 
-    // Lookup in cache first
-    File file = new File(cacheDir, key);
-    if (file.exists() && file.isFile()) {
-      deploy(file, identifier, serviceName, deploymentOptions, classLoader, resolution);
-      return;
-    }
-
+    //
     HttpClient client = vertx.createHttpClient(options);
-    doRequest(client, identifier, serviceName, deploymentOptions, classLoader, file, url, stringURL, false, resolution);
+    doRequest(client, deploymentFile, url, signatureFile, signatureURL, ar -> {
+      if (ar.succeeded()) {
+        if (ar.result().signature != null) {
+          PGPSignature signature;
+          URI publicKeyURI;
+          File publicKeyFile;
+          try {
+            signature = PGPHelper.getSignature(Files.readAllBytes(ar.result().signature.toPath()));
+            String requestURI = String.format("/pks/lookup?op=get&options=mr&search=0x%016X", signature.getKeyID());
+            publicKeyURI = new URI("http://" + keyserverHost + ":" + keyserverPort + requestURI);
+            publicKeyFile = new File(cacheDir, URLEncoder.encode(publicKeyURI.toString(), "UTF-8"));
+          } catch (Exception e) {
+            client.close();
+            resolution.fail(e);
+            return;
+          }
+          doRequest(client, publicKeyFile, publicKeyURI, null, null, false, ar2 -> {
+            if (ar2.succeeded()) {
+              try {
+                PGPPublicKey publicKey = PGPHelper.getPublicKey(Files.readAllBytes(ar2.result().toPath()), signature.getKeyID());
+                FileInputStream f = new FileInputStream(ar.result().deployment);
+                boolean verified = PGPHelper.verifySignature(f, new FileInputStream(ar.result().signature), publicKey);
+                if (verified) {
+                  deploy(deploymentFile, identifier, serviceName, deploymentOptions, classLoader, resolution);
+                } else {
+                  resolution.fail(new Exception("Signature verification failed"));
+                }
+              } catch (Exception e) {
+                resolution.fail(e);
+              } finally {
+                client.close();
+              }
+            } else {
+              client.close();
+              resolution.fail(ar2.cause());
+            }
+          });
+        } else {
+          client.close();
+          deploy(deploymentFile, identifier, serviceName, deploymentOptions, classLoader, resolution);
+        }
+      } else {
+        resolution.fail(ar.cause());
+      }
+    });
   }
 
-  protected void doRequest(
-      HttpClient client,
-      String identifier,
-      String serviceName,
-      DeploymentOptions deploymentOptions,
-      ClassLoader classLoader,
-      File file,
-      URL url,
-      String stringURL,
-      boolean auth,
-      Future<String> resolution) {
-    // Get file from remote server
-    HttpClientRequest req = client.get(url.getPort(), url.getHost(), url.getPath());
+  private void doRequest(HttpClient client, File file, URI url, String username, String password, boolean auth, Handler<AsyncResult<File>> handler) {
+    if (file.exists() && file.isFile()) {
+      handler.handle(Future.succeededFuture(file));
+      return;
+    }
+    String requestURI = url.getPath();
+    if (url.getQuery() != null) {
+      requestURI += "?" + url.getQuery();
+    }
+    HttpClientRequest req = client.get(url.getPort(), url.getHost(), requestURI);
     if (auth && username != null && password != null) {
       req.putHeader("Authorization", "Basic " + Base64.getEncoder().encodeToString((username + ":" + password).getBytes()));
     }
     req.exceptionHandler(err -> {
-      client.close();
-      resolution.fail(err);
+      handler.handle(Future.failedFuture(err));
     });
     req.handler(resp -> {
       int status = resp.statusCode();
       if (status == 200) {
-        String disposition = resp.getHeader("Content-Disposition");
-        String contentType = resp.getHeader("Content-Type");
-        String filename = null;
-        if (disposition != null) {
-          int index = disposition.indexOf("filename=");
-          if (index > 0) {
-            filename = disposition.substring(index + 10, disposition.length() - 1);
-          }
-        }
-        if (filename == null) {
-          filename = stringURL.substring(stringURL.lastIndexOf("/") + 1, stringURL.length());
-        }
         resp.pause();
-        vertx.fileSystem().open(file.getPath(), new OpenOptions().setCreate(true), ar -> {
-          if (ar.succeeded()) {
+        vertx.fileSystem().open(file.getPath(), new OpenOptions().setCreate(true), ar2 -> {
+          if (ar2.succeeded()) {
             resp.resume();
-            AsyncFile result = ar.result();
-            Pump pump = Pump.pump(resp, ar.result());
+            AsyncFile result = ar2.result();
+            Pump pump = Pump.pump(resp, ar2.result());
             pump.start();
             resp.exceptionHandler(err -> {
-              client.close();
-              resolution.fail(ar.cause());
+              handler.handle(Future.failedFuture(ar2.cause()));
             });
             resp.endHandler(v1 -> {
               result.close(v2 -> {
-                deploy(file, identifier, serviceName, deploymentOptions, classLoader, resolution);
+                if (v2.succeeded()) {
+                  handler.handle(Future.succeededFuture(file));
+                } else {
+                  handler.handle(Future.failedFuture(v2.cause()));
+                }
               });
-              client.close();
             });
           } else {
-            client.close();
-            resolution.fail(ar.cause());
+            handler.handle(Future.failedFuture(ar2.cause()));
           }
         });
       } else if (status == 401) {
         if (prefix().equals("https") && resp.getHeader("WWW-Authenticate") != null && username != null && password != null) {
-          doRequest(client, identifier, serviceName, deploymentOptions, classLoader, file, url, stringURL, true, resolution);
+          doRequest(client, file, url, username, password, true, handler);
           return;
         }
-        client.close();
-        resolution.fail(new Exception("Unauthorized"));
+        handler.handle(Future.failedFuture(new Exception("Unauthorized")));
       } else {
-        client.close();
-        resolution.fail(new Exception("Cannot get file status:" + status));
+        handler.handle(Future.failedFuture(new Exception("Cannot get file status:" + status)));
       }
     });
     req.end();
+  }
+
+  private static class Result {
+
+    final File deployment;
+    final File signature;
+
+    public Result(File deployment, File signature) {
+      this.deployment = deployment;
+      this.signature = signature;
+    }
+  }
+
+  protected void doRequest(HttpClient client, File file, URI url, File signatureFile, URI signatureURL, Handler<AsyncResult<Result>> handler) {
+    doRequest(client, file, url, username, password, false, ar1 -> {
+      if (ar1.succeeded()) {
+        // Now get the signature if any
+        if (keyserverHost != null) {
+          doRequest(client, signatureFile, signatureURL, username, password, false, ar3 -> {
+            if (ar3.succeeded()) {
+              handler.handle(Future.succeededFuture(new Result(ar1.result(), ar3.result())));
+            }
+          });
+        } else {
+          handler.handle(Future.succeededFuture(new Result(file, null)));
+        }
+      } else {
+        handler.handle(Future.failedFuture(ar1.cause()));
+      }
+    });
   }
 
   private void deploy(File file, String identifier, String serviceName, DeploymentOptions deploymentOptions, ClassLoader classLoader, Future<String> resolution) {
